# ai_schedule_coordinator

./: .gitignore  README.md  pyproject.toml  start_web.sh
src/: .gitignore  cli.py  conf_sample.py  coordinator.py  event.py  event_parser.py  google_calender_service.py  gpt_service.py  main.py  result.py  time_range.py
tests/: coordinator_test.py  event_parser_test.py  google_calender_service_test.py  gpt_service_test.py  time_range_test.py
